common: Port to GTK4
This is only the bare minimum to make everything under panels/common
build. Since these widgets are used by the main window, port them
first.

CcTimeEntry was particularly hard to port. That's because GtkEntry
is a final class now. Overall, though, I'm happy with how it turned
out to be - much cleaner, less code, more obvious.

--- a/panels/common/cc-language-chooser.ui
+++ b/panels/common/cc-language-chooser.ui
@@ -11,11 +11,7 @@
     <child type="action">
       <object class="GtkButton" id="select_button">
         <property name="label" translatable="yes">_Select</property>
-        <property name="visible">True</property>
         <property name="sensitive">False</property>
-        <property name="can_focus">True</property>
-        <property name="can_default">True</property>
-        <property name="receives_default">True</property>
         <property name="use_underline">True</property>
         <property name="valign">center</property>
       </object>
@@ -23,25 +19,19 @@
     <child type="action">
       <object class="GtkButton" id="cancel_button">
         <property name="label" translatable="yes">_Cancel</property>
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
         <property name="use_underline">True</property>
         <property name="valign">center</property>
       </object>
     </child>
-    <child internal-child="vbox">
+    <child>
       <object class="GtkBox">
-        <property name="visible">True</property>
         <property name="orientation">vertical</property>
         <property name="spacing">0</property>
-        <property name="border-width">0</property>
         <child>
           <object class="GtkSearchBar" id="search_bar">
-            <property name="visible">True</property>
             <property name="hexpand">True</property>
             <child>
               <object class="GtkSearchEntry" id="language_filter_entry">
-                <property name="visible">True</property>
                 <property name="width_chars">30</property>
                 <signal name="search-changed" handler="language_filter_entry_search_changed_cb" object="CcLanguageChooser" swapped="yes"/>
               </object>
@@ -50,22 +40,21 @@
         </child>
         <child>
           <object class="GtkScrolledWindow">
-            <property name="visible">True</property>
             <property name="hscrollbar-policy">never</property>
             <property name="vscrollbar-policy">automatic</property>
             <property name="propagate-natural-height">True</property>
             <property name="min-content-height">200</property>
             <child>
               <object class="GtkListBox" id="language_listbox">
-                <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="vexpand">True</property>
                 <property name="halign">fill</property>
                 <property name="valign">fill</property>
+                <property name="selection-mode">none</property>
+                <property name="show-separators">True</property>
                 <signal name="row-activated" handler="language_listbox_row_activated_cb" object="CcLanguageChooser" swapped="yes"/>
                 <child type="placeholder">
                   <object class="GtkLabel">
-                    <property name="visible">True</property>
                     <property name="label" translatable="yes">No languages found</property>
                     <property name="sensitive">False</property>
                   </object>
@@ -74,15 +63,12 @@
                 <!-- "More" row -->
                 <child>
                   <object class="GtkListBoxRow" id="more_row">
-                    <property name="visible">True</property>
                     <child>
                       <object class="GtkBox">
-                        <property name="visible">True</property>
                         <property name="spacing">10</property>
                         <property name="tooltip_markup" translatable="yes">More…</property>
                         <child>
                           <object class="GtkImage">
-                            <property name="visible">True</property>
                             <property name="hexpand">True</property>
                             <property name="halign">center</property>
                             <property name="icon-name">view-more-symbolic</property>
