--- a/panels/common/cc-time-editor.ui
+++ b/panels/common/cc-time-editor.ui
@@ -1,170 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <template class="CcTimeEditor" parent="GtkBin">
-    <property name="visible">True</property>
+  <template class="CcTimeEditor" parent="AdwBin">
     <child>
       <object class="GtkGrid">
-        <property name="visible">True</property>
         <property name="row-spacing">6</property>
         <property name="column-spacing">6</property>
 
         <!-- Increment Hour Button -->
         <child>
           <object class="GtkButton" id="hour_up_button">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
             <property name="valign">center</property>
             <property name="halign">center</property>
-            <signal name="button-press-event" handler="editor_change_time_pressed_cb" swapped="yes"/>
-            <signal name="button-release-event" handler="editor_change_time_released_cb" swapped="yes"/>
+            <property name="icon-name">go-up-symbolic</property>
+            <layout>
+              <property name="column">0</property>
+              <property name="row">0</property>
+            </layout>
             <style>
               <class name="titlebutton"/>
               <class name="circular"/>
               <class name="flat"/>
             </style>
+            <accessibility>
+              <property name="label" translatable="yes">Increment Hour</property>
+            </accessibility>
             <child>
-              <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="icon-name">go-up-symbolic</property>
-              </object>
-            </child>
-            <child internal-child="accessible">
-              <object class="AtkObject">
-                <property name="AtkObject::accessible-name" translatable="yes">Increment Hour</property>
+              <object class="GtkGestureClick">
+                <property name="propagation-phase">capture</property>
+                <signal name="pressed" handler="editor_change_time_pressed_cb" swapped="yes"/>
+                <signal name="released" handler="editor_change_time_released_cb" swapped="yes"/>
               </object>
             </child>
           </object>
-          <packing>
-            <property name="left-attach">0</property>
-            <property name="top-attach">0</property>
-          </packing>
         </child>
 
         <!-- Increment Minute Button -->
         <child>
           <object class="GtkButton" id="minute_up_button">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
             <property name="valign">center</property>
             <property name="halign">center</property>
-            <signal name="button-press-event" handler="editor_change_time_pressed_cb" swapped="yes"/>
-            <signal name="button-release-event" handler="editor_change_time_released_cb" swapped="yes"/>
+            <property name="icon-name">go-up-symbolic</property>
+            <layout>
+              <property name="column">1</property>
+              <property name="row">0</property>
+            </layout>
             <style>
               <class name="titlebutton"/>
               <class name="circular"/>
               <class name="flat"/>
             </style>
+            <accessibility>
+              <property name="label" translatable="yes">Increment Minute</property>
+            </accessibility>
             <child>
-              <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="icon-name">go-up-symbolic</property>
-              </object>
-            </child>
-            <child internal-child="accessible">
-              <object class="AtkObject">
-                <property name="AtkObject::accessible-name" translatable="yes">Increment Minute</property>
+              <object class="GtkGestureClick">
+                <property name="propagation-phase">capture</property>
+                <signal name="pressed" handler="editor_change_time_pressed_cb" swapped="yes"/>
+                <signal name="released" handler="editor_change_time_released_cb" swapped="yes"/>
               </object>
             </child>
           </object>
-          <packing>
-            <property name="left-attach">1</property>
-            <property name="top-attach">0</property>
-          </packing>
         </child>
 
         <child>
           <object class="CcTimeEntry" id="time_entry">
-            <property name="visible">True</property>
-            <child internal-child="accessible">
-              <object class="AtkObject">
-                <property name="AtkObject::accessible-description" translatable="yes">Time</property>
-              </object>
-            </child>
+            <layout>
+              <property name="column">0</property>
+              <property name="row">1</property>
+              <property name="column-span">2</property>
+            </layout>
+            <accessibility>
+              <property name="label" translatable="yes">Time</property>
+            </accessibility>
           </object>
-          <packing>
-            <property name="left-attach">0</property>
-            <property name="top-attach">1</property>
-            <property name="width">2</property>
-          </packing>
         </child>
 
         <!-- Decrement Hour Button -->
         <child>
           <object class="GtkButton" id="hour_down_button">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
             <property name="valign">center</property>
             <property name="halign">center</property>
-            <signal name="button-press-event" handler="editor_change_time_pressed_cb" swapped="yes"/>
-            <signal name="button-release-event" handler="editor_change_time_released_cb" swapped="yes"/>
+            <property name="icon-name">go-down-symbolic</property>
+            <layout>
+              <property name="column">0</property>
+              <property name="row">2</property>
+            </layout>
             <style>
               <class name="titlebutton"/>
               <class name="circular"/>
               <class name="flat"/>
             </style>
+            <accessibility>
+              <property name="label" translatable="yes">Decrement Hour</property>
+            </accessibility>
             <child>
-              <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="icon-name">go-down-symbolic</property>
-              </object>
-            </child>
-            <child internal-child="accessible">
-              <object class="AtkObject">
-                <property name="AtkObject::accessible-name" translatable="yes">Decrement Hour</property>
+              <object class="GtkGestureClick">
+                <property name="propagation-phase">capture</property>
+                <signal name="pressed" handler="editor_change_time_pressed_cb" swapped="yes"/>
+                <signal name="released" handler="editor_change_time_released_cb" swapped="yes"/>
               </object>
             </child>
           </object>
-          <packing>
-            <property name="left-attach">0</property>
-            <property name="top-attach">2</property>
-          </packing>
         </child>
 
         <!-- Decrement Minute Button -->
         <child>
           <object class="GtkButton" id="minute_down_button">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
             <property name="valign">center</property>
             <property name="halign">center</property>
-            <signal name="button-press-event" handler="editor_change_time_pressed_cb" swapped="yes"/>
-            <signal name="button-release-event" handler="editor_change_time_released_cb" swapped="yes"/>
+            <property name="icon-name">go-down-symbolic</property>
+            <layout>
+              <property name="column">1</property>
+              <property name="row">2</property>
+            </layout>
             <style>
               <class name="titlebutton"/>
               <class name="circular"/>
               <class name="flat"/>
             </style>
+            <accessibility>
+              <property name="label" translatable="yes">Decrement Minute</property>
+            </accessibility>
             <child>
-              <object class="GtkImage">
-                <property name="visible">True</property>
-                <property name="icon-name">go-down-symbolic</property>
-              </object>
-            </child>
-            <child internal-child="accessible">
-              <object class="AtkObject">
-                <property name="AtkObject::accessible-name" translatable="yes">Decrement Minute</property>
+              <object class="GtkGestureClick">
+                <property name="propagation-phase">capture</property>
+                <signal name="pressed" handler="editor_change_time_pressed_cb" swapped="yes"/>
+                <signal name="released" handler="editor_change_time_released_cb" swapped="yes"/>
               </object>
             </child>
           </object>
-          <packing>
-            <property name="left-attach">1</property>
-            <property name="top-attach">2</property>
-          </packing>
         </child>
 
         <!-- AM/PM Button -->
         <child>
           <object class="GtkButton" id="am_pm_button">
-            <property name="visible">True</property>
             <property name="valign">center</property>
             <signal name="clicked" handler="editor_am_pm_button_clicked_cb" swapped="yes"/>
+            <layout>
+              <property name="column">2</property>
+              <property name="row">1</property>
+            </layout>
             <child>
               <object class="GtkStack" id="am_pm_stack">
-                <property name="visible">True</property>
                 <signal name="notify::visible-child" handler="editor_am_pm_stack_changed_cb" swapped="yes"/>
                 <child>
                   <object class="GtkLabel" id="am_label">
-                    <property name="visible">True</property>
                     <attributes>
                       <attribute name="scale" value="1.4"/>
                     </attributes>
@@ -172,7 +152,6 @@
                 </child>
                 <child>
                   <object class="GtkLabel" id="pm_label">
-                    <property name="visible">True</property>
                     <attributes>
                       <attribute name="scale" value="1.4"/>
                     </attributes>
@@ -181,10 +160,6 @@
               </object>
             </child>
           </object>
-          <packing>
-            <property name="left-attach">2</property>
-            <property name="top-attach">1</property>
-          </packing>
         </child>
 
       </object>
