--- a/panels/info-overview/cc-info-overview-panel.ui
+++ b/panels/info-overview/cc-info-overview-panel.ui
@@ -2,43 +2,30 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <template class="CcInfoOverviewPanel" parent="CcPanel">
-    <property name="visible">True</property>
-    <property name="can-focus">False</property>
     <child>
       <object class="GtkScrolledWindow">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
         <property name="min-content-height">480</property>
         <property name="hscrollbar-policy">never</property>
         <child>
-          <object class="HdyClamp">
-            <property name="visible">True</property>
+          <object class="AdwClamp">
             <property name="margin_top">32</property>
             <property name="margin_bottom">32</property>
             <property name="margin_start">12</property>
             <property name="margin_end">12</property>
             <child>
               <object class="GtkBox">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
                 <property name="valign">center</property>
                 <property name="spacing">30</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkImage" id="os_logo">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="use_fallback">True</property>
+                  <object class="GtkPicture" id="os_logo">
+                    <property name="can-shrink">False</property>
+                    <property name="alternative-text" translatable="yes">System Logo</property>
                   </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
-                  </packing>
                 </child>
 
                 <child>
                   <object class="GtkListBox">
-                    <property name="visible">True</property>
                     <property name="selection-mode">none</property>
                     <signal name="row-activated" handler="cc_info_panel_row_activated_cb" swapped="yes"/>
                     <style>
@@ -48,7 +35,6 @@
                     <!-- Device name -->
                     <child>
                       <object class="CcListRow" id="hostname_row">
-                        <property name="visible">True</property>
                         <property name="title" translatable="yes">Device Name</property>
                         <property name="secondary-label" bind-source="hostname_entry" bind-property="text" bind-flags="sync-create" />
                         <property name="icon-name">go-next-symbolic</property>
@@ -60,7 +46,6 @@
 
                 <child>
                   <object class="GtkListBox" id="hardware_box">
-                    <property name="visible">True</property>
                     <property name="selection-mode">none</property>
                     <style>
                       <class name="content" />
@@ -78,7 +63,6 @@
                     <!-- Memory -->
                     <child>
                       <object class="CcListRow" id="memory_row">
-                        <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes">Memory</property>
                       </object>
@@ -87,7 +71,6 @@
                     <!-- Processor -->
                     <child>
                       <object class="CcListRow" id="processor_row">
-                        <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes">Processor</property>
                       </object>
@@ -96,7 +79,6 @@
                     <!-- Graphics -->
                     <child>
                       <object class="CcListRow" id="graphics_row">
-                        <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes">Graphics</property>
                       </object>
@@ -105,7 +87,6 @@
                     <!-- Disk Capacity -->
                     <child>
                       <object class="CcListRow" id="disk_row">
-                        <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes">Disk Capacity</property>
                         <property name="secondary-label" translatable="yes">Calculating…</property>
@@ -117,7 +98,6 @@
 
                 <child>
                   <object class="GtkListBox" id="os_box">
-                    <property name="visible">True</property>
                     <property name="selection-mode">none</property>
                     <signal name="row-activated" handler="cc_info_panel_row_activated_cb" swapped="yes"/>
                     <style>
@@ -127,7 +107,6 @@
                     <!-- OS Name -->
                     <child>
                       <object class="CcListRow" id="os_name_row">
-                        <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes"
                                   comments="translators: this field contains the distro name and version">OS Name</property>
@@ -137,7 +116,6 @@
                     <!-- OS Type -->
                     <child>
                       <object class="CcListRow" id="os_type_row">
-                        <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes">OS Type</property>
                       </object>
@@ -146,7 +124,6 @@
                     <!-- GNOME Version -->
                     <child>
                       <object class="CcListRow" id="gnome_version_row">
-                        <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes">GNOME Version</property>
                         <property name="secondary-label">3.0</property>
@@ -156,7 +133,6 @@
                     <!-- Windowing System -->
                     <child>
                       <object class="CcListRow" id="windowing_system_row">
-                        <property name="visible">True</property>
                         <property name="activatable">False</property>
                         <property name="title" translatable="yes">Windowing System</property>
                       </object>
@@ -174,7 +150,6 @@
                     <!-- Software Updates -->
                     <child>
                       <object class="CcListRow" id="software_updates_row">
-                        <property name="visible">True</property>
                         <property name="title" translatable="yes">Software Updates</property>
                         <property name="icon-name">go-next-symbolic</property>
                       </object>
@@ -196,19 +171,19 @@
     <property name="modal">True</property>
     <property name="use-header-bar">1</property>
     <property name="default-height">24</property>
+    <property name="hide-on-close">True</property>
     <property name="title" translatable="yes">Rename Device</property>
-    <signal name="delete-event" handler="gtk_widget_hide_on_delete"/>
+    <signal name="response" handler="on_hostname_editor_dialog_response_cb" object="CcInfoOverviewPanel" swapped="no" />
 
-    <child internal-child="vbox">
+    <child>
       <object class="GtkBox">
-        <property name="border-width">0</property>
         <property name="margin-top">18</property>
         <property name="margin-start">12</property>
         <property name="margin-end">12</property>
         <property name="margin-bottom">18</property>
+        <property name="orientation">vertical</property>
         <child>
           <object class="GtkLabel">
-            <property name="visible">True</property>
             <property name="margin-bottom">18</property>
             <property name="wrap">True</property>
             <property name="max-width-chars">35</property>
@@ -218,7 +193,6 @@
         </child>
         <child>
           <object class="GtkEntry" id="device_name_entry">
-            <property name="visible">True</property>
             <signal name="changed" handler="on_device_name_entry_changed" swapped="yes"/>
           </object>
         </child>
@@ -228,8 +202,6 @@
     <!-- Rename button -->
     <child type="action">
       <object class="GtkButton" id="rename_button">
-        <property name="visible">True</property>
-        <property name="can-default">True</property>
         <property name="use-underline">True</property>
         <property name="label" translatable="yes">_Rename</property>
       </object>
@@ -238,7 +210,6 @@
     <!-- Cancel button -->
     <child type="action">
       <object class="GtkButton" id="cancel_button">
-        <property name="visible">True</property>
         <property name="use-underline">True</property>
         <property name="label" translatable="yes">_Cancel</property>
       </object>
